--- a/index.html
+++ b/index.html
@@ -1,33 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Assigenments</title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <title>Assignments</title>
+  </head>
+  <body>
     <header>
-        <h1>Ahmed Magdi Mostafa</h1>
+      <h1>Ahmed Magdi Mostafa</h1>
     </header>
     <main>
-        <ul>
-            <li>
-                <a href="ITI_ASS_1/index.html">
-                    Assigenment 1
-                </a>
-            </li>
-            <li>
-                <a href="ITI_ASS_2/index.html">
-                    Assigenment 2
-                </a>
-            </li>
-            <li>
-                <a href="ITI_ASS_3/index.html">
-                    Assigenment 3
-                </a>
-            </li>
-        </ul>
+      <h2>Assignments</h2>
+      <ul>
+        <li>
+          <a href="ITI_ASS_1/index.html"> Assignment 1 : Magaize </a>
+        </li>
+        <li>
+          <a href="ITI_ASS_2/index.html"> Assignment 2 : Students Average</a>
+        </li>
+        <li>
+          <a href="ITI_ASS_3/index.html"> Assignment 3 : Book Fair</a>
+        </li>
+      </ul>
     </main>
-</body>
+  </body>
 </html>
