Updated projects page

--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
         <li>
           <a href="ITI_ASS_3/index.html"> Assignment 3 : Book Fair</a>
         </li>
+		<li>
+          <a href="ITI_ASS_5/client/index.html"> Assignment 5 : Todo List</a>
+        </li>
       </ul>
     </main>
   </body>
