changes to index.html

--- a/ITI_ASS_5/client/index.html
+++ b/ITI_ASS_5/client/index.html
@@ -23,7 +23,9 @@
 
     <section>
       <h1>Todo List</h1>
-      <div id="todos"></div>
+      <div id="todos">
+        <div class="todo">No Data Found!</div>
+      </div>
     </section>
     <footer>
       <h4>Made By : Ahmed Magdi</h4>
